YUK-4887 	 New bulk add,delete and update features for managing the deployment of an AMR system - fix scrollbar on selected devices popup

--- a/yukon-client/yukon-web/WebContent/WebConfig/yukon/styles/YukonGeneralStyles.css
+++ b/yukon-client/yukon-web/WebContent/WebConfig/yukon/styles/YukonGeneralStyles.css
@@ -92,6 +92,19 @@ span.internalSectionHeader {
 }
 
 /* Data results table styles */
+/* if you dont want a table embedded within a styled table to inherit parent's style */
+/* add to the elements as needed */
+table.noStyle {
+}
+
+table.noStyle th {
+}
+
+table.noStyle td {
+    border: 0px !important;
+}
+
+/* Data results table styles */
 table.resultsTable {
 	width: 95%;	
   	border: 1px solid #ccc;
@@ -193,6 +206,9 @@ table.compactResultsTable th {
 	color: 	#000000;
 	font-size: 11px;
 	font-weight: 600;
+	text-align:left;
+	vertical-align:bottom;
+	
 }
 
 table.compactResultsTable td {
@@ -481,6 +497,12 @@ div.sectionContainer .sectionContainer_titleBar {
 
 div.sectionContainer .sectionContainer_titleBar .sectionContainer_title {
    color:#0066CC;
+   font-size:16px;
+   font-weight:bold;
+}
+
+div.sectionContainer .sectionContainer_titleBar .sectionContainer_blackTitle {
+   color:#000000;
    font-size:16px;
    font-weight:bold;
 }
